[package]
name = "nupsql"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[[bin]]
name = "nu_plugin_psql"
path = "src/main.rs"

[dependencies]
nu = { version = "0.3.0", default-features = false, features = ["crossterm"] }
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres/", rev = "5283ad4" }
tokio = "0.2.0-alpha.4"
futures-preview = { version = "=0.3.0-alpha.18", features = ["nightly", "async-await"] }
