[package]
name = "nupsql"
version = "0.2.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[[bin]]
name = "nu_plugin_psql"
path = "src/main.rs"

[dependencies]
nu-protocol = { git = "https://github.com/nushell/nushell", package = "nu-protocol" }
nu-source = { git = "https://github.com/nushell/nushell", package = "nu-source" }
nu-errors = { git = "https://github.com/nushell/nushell", package = "nu-errors" }
tokio-postgres = { version = "0.5.0-alpha.2" }
tokio = { version = "0.2", features = ["macros"] }
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat", "io-compat"] }
#futures = "0.3"
